--- a/web-server/views/about.hbs
+++ b/web-server/views/about.hbs
@@ -4,8 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>From a About static file </h1>
+    <h1>{{title}}</h1>
+    <p>Created  by  {{name}}</p>
 </body>
 </html>
