--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -4,8 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"> </script>
 </head>
 <body>
-    <h1>From a static file </h1>
+    <h1>My Name  in {{name}} </h1>
+    <img src="/img/me.jpg">
 </body>
 </html>
