--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <p>Created  by  {{name}}</p>
+{{>header}}
+{{>footer}}
 </body>
 </html>
