--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>From a Help {{title}} file </h1>
+{{>header}}
     <p>{{message}}</p>
+{{>footer}}
 </body>
 </html>
