--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -8,7 +8,8 @@
     <script src="/js/app.js"> </script>
 </head>
 <body>
-    <h1>My Name  in {{name}} </h1>
+{{>header}}
     <img src="/img/me.jpg">
+{{>footer}}
 </body>
 </html>
