--- a/web-server/templates/partials/header.hbs
+++ b/web-server/templates/partials/header.hbs
@@ -1,7 +1,7 @@
-<h1>{{title}}</h1>
 
-<div>
+<header>
+    <h1>{{title}}</h1>
     <a href="/">City Today</a>
     <a href="/help">Help</a>
     <a href="/about">About</a>
-</div>
+</header>
