--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Page 404</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-{{>header}}
-
-<p>{{errorMessage}}</p>
-
+    <div class="main-content">
+        {{>header}}
+        <p>{{errorMessage}}</p>
+    </div>
 {{>footer}}
 </body>
 </html>
