--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -3,12 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Help</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-{{>header}}
-    <p>{{message}}</p>
+    <div class="main-content">
+        {{>header}}
+        <p>{{message}}</p>
+    </div>
 {{>footer}}
 </body>
 </html>
