--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -3,13 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>City Today</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"> </script>
 </head>
 <body>
-{{>header}}
-    <img src="/img/me.jpg">
+    <div class="main-content">
+        {{>header}}
+        <p>use this to get City today</p>
+    </div>
+   
 {{>footer}}
 </body>
 </html>
