--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -14,7 +14,7 @@ body{
     flex-grow: 1;
 }
 
-p{
+.intro{
     color: #888888;
     border-top: 1px solid #eeeeee;
     margin-top: 16px;
@@ -39,4 +39,16 @@ a{
 
 .portrait{
     width: 250;
+}
+
+input{
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+
+button{
+    cursor: pointer;
+    border: 1px solid #888888;
+    color:  white;
+    padding: 8px;
 }
