--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +7,7 @@
     <title>City Today</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <div class="main-content">
         {{>header}}
@@ -15,35 +17,38 @@
             <input placeholder="City Name">
             <button>Search</button>
         </form>
+                <h2 id='loading'>Loading...</h2>
+        <div id='data'>
+            <h1 id='cityName' style="color:#002372;">Karachi</h1>
 
-        <h1 id='cityName'>Karachi</h1>
-        
-        <h2>Location</h2>
+            <h2>Location</h2>
 
-        <h5 id='place'>Newyork Kuafor, Ankuva avm no:58, Ankara, Ankara, Turkey</h5>
+            <h5 id='place' style="color:#231F20;">Newyork Kuafor, Ankuva avm no:58, Ankara, Ankara, Turkey</h5>
 
-        <h4>Longitude: <strong id='longitude'>32.755886</strong></h4>
-        <h4>Latitude: <strong id='latitude'>39.883713</strong></h4>
+            <h4>Longitude: <strong id='longitude' style="color:#547390;">32.755886</strong></h4>
+            <h4>Latitude: <strong id='latitude' style="color:#547390;">39.883713</strong></h4>
 
-        <h2>Weather</h2>
-        <h4>Headline: <strong id='headline'>Pleasant this weekend</strong></h4>
+            <h2>Weather</h2>
+            <h4>Headline: <strong id='headline' style="color:#27E64B;">Pleasant this weekend</strong></h4>
 
-        <h4>MinTemperature: <strong id='minTemperature'>7.5</strong> C</h4>
-        <h4>MaxTemperature: <strong id='maxTemperature'>22.1</strong> C</h4>
-        
-        <h4>Day: <strong id='day'>Partly sunny</strong></h4>
-        <h4>Night: <strong id='night'>Mostly clear</strong></h4>
-        
-        <h2>News</h2>
-        <div id='news'></div>
+            <h4>MinTemperature: <strong id='minTemperature' style="color:#0570F0;">7.5</strong> C</h4>
+            <h4>MaxTemperature: <strong id='maxTemperature' style="color:#C9234B;">22.1</strong> C</h4>
 
-        <h4 >Urla'da patlama: 1 şehit, 1 yaralı - Cumhuriyet</h4>
-        <p>İzmir'in Urla ilçesindeki askeri birlikte eğitim sırasında yaşanan patlamada bir asker şehit oldu bir asker ise yaralandı.</p>
-        <strong>BloombergHT</strong><br/>
-        <a>Bloomberght.com</a>
+            <h4>Day: <strong id='day' style="color:#F19E40;">Partly sunny</strong></h4>
+            <h4>Night: <strong id='night' style="color:#141852;">Mostly clear</strong></h4>
+
+            <h2>News</h2>
+            <div id='news'></div>
+
+            <h4>Urla'da patlama: 1 şehit, 1 yaralı - Cumhuriyet</h4>
+            <p>İzmir'in Urla ilçesindeki askeri birlikte eğitim sırasında yaşanan patlamada bir asker şehit oldu bir
+                asker ise yaralandı.</p>
+            <strong>BloombergHT</strong><br />
+            <a>Bloomberght.com</a>
+        </div>
     </div>
-   
-{{>footer}}
+
+    {{>footer}}
     <script src="/js/app.js"> </script>
 </body>
 
